--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -10,10 +10,10 @@ NEXT SCHEDULED WORK SESSION (DEBUGGING AND / OR INFRASTRUCTURE)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Privacy mode should also hide COMPLETELY the gain / loss summary at the bottom of the portfolio page (including the title description [which says whether it's a gain or loss]).
+Look for a good alternative to PHPdesktop, or at least a simple / redistributable binary to run a PHP server.
 
 
-Fix issues on Desktop Editions. Zoom, sidebar scrolling, titles showing properly, and text increase / decrease features are not running well at all with the big overhaul done for v6.00.19. Find out why.
+Fix issues on Desktop Editions. Sidebar scrolling only partially / sometimes enables in REGULAR sidebar, doesn't work at all on COMPACT sidebar, and titles scrolling sticky properly are not running well at all with the big overhaul done for v6.00.19. Find out why.
 
 
 Tighten up the portfolio table data spacing / padding in firefox, it WAAAY more then chrome.
