--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -16,6 +16,12 @@ Look for a good alternative to PHPdesktop, or at least a simple / redistributabl
 Fix issues on Desktop Editions. Sidebar scrolling only partially / sometimes enables in REGULAR sidebar, doesn't work at all on COMPACT sidebar, and titles scrolling sticky properly are not running well at all with the big overhaul done for v6.00.19. Find out why.
 
 
+The COMPACT sidebar scrollbars act up in firefox. Find out why. It also sometimes takes TWO clicks to open submenus in Firefox.
+
+
+Change the light them scrollbar colors for the sidebars.
+
+
 Update screenshots, since we overhauled everything in the interface.
 
 
