--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6122,9 +6122,15 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 -------------------------------------------------------------------
 6.00.20:
 
--BUG FIX: Miscellaneous (small) fixes
+-BUG FIX: Miscellaneous fixes
 
--Code cleanup / housekeeping
+-Many fixes / improvements to the new sidebar navigation / main content areas
+
+-Miscellaneous user experience improvements
+
+-Code refactoring / cleanup / housekeeping
+
+-Additions to 'Other Resources' page
 
 -v6.00.16 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.15 OR LOWER.
 
